# Travel-Reimbursement-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  constants.py  main.py
app/agents/: __init__.py  reimbursement_agent.py  state.py  workflow.py
app/api/: __init__.py  dependencies.py  health.py  routes.py
app/core/: __init__.py  security.py  settings.py  startup.py
app/models/: __init__.py  audit.py  claim.py  decision.py  policy.py  receipt.py
app/prompts/: decision_prompt.txt  explanation_prompt.txt  manual_review_prompt.txt  planner_prompt.txt  reimbursement_system_prompt.txt  system_prompt.txt
app/schemas/: __init__.py  request_schema.py  response_schema.py  validation_schema.py
app/services/: __init__.py  audit_service.py  decision_service.py  embedding_service.py  llm_service.py  retrieval_service.py  validation_service.py
app/tools/: __init__.py  approval_matrix.py  confidence_calculator.py  duplicate_detector.py  eligibility_checker.py  limit_checker.py  output_validator.py  policy_lookup.py  (+1 more)
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: api.md  architecture.md  assumptions.md  limitations.md  workflow.md
sample_data/: historical_claims.json
scripts/: build_index.py  cleanup.py  run_demo.py  seed_sample_data.py
tests/: __init__.py  test_agent.py  test_api.py  test_duplicate_detector.py  test_end_to_end.py  test_limit_checker.py  test_output_validator.py  test_policy_lookup.py  test_receipt_validator.py
ui/: components.py  dashboard.py  streamlit_app.py
(+16 files in other folders)
